tag 周りのURL変更（fastcgiでエラーになるため）

--- a/templates/note/note_delete.html
+++ b/templates/note/note_delete.html
@@ -42,7 +42,7 @@
         <td><nobr>タグ</nobr></td>
         <td>
             {% for tag in note.tag.all %}
-            <a href="/note/tag/{{tag.name}}/">{{tag.name}}</a>
+            <a href="/note/tag/?tag={{tag.name}}">{{tag.name}}</a>
             {% endfor %}
         </td>
     </tr>
