--- a/templates/note/home.html
+++ b/templates/note/home.html
@@ -9,7 +9,7 @@
 {% if notes %}
 <p>タグ一覧: 
 {% for tag in tags %}
-<a href='/note/tag/{{tag.tag}}/' class='{{tag.cssclass}}'>{{tag.tag}}</a>&nbsp;
+<a href='/note/tag/?tag={{tag.tag}}' class='{{tag.cssclass}}'>{{tag.tag}}</a>&nbsp;
 {% endfor %}
 </p>
 {% if belongs %}
