経過時間の自動計算を JavaScript で実装

--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -6,6 +6,8 @@
         href="/note/rss/latest/" title="NAL研のRSS">
         <link rel="alternate" type="application/rss+xml"
         href="/note/rss/comment/" title="コメントのRSS">
+        <script type="text/javascript" src="/site_media/js/jquery-1.4.4.min.js"></script>
+        <script type="text/javascript" src="/site_media/js/note_form.js"></script>
         {% block rss %}
         {% endblock rss %}
         <link rel="stylesheet" href="/site_media/css/scaffold.css" />
