--- a/templates/note/note_new.html
+++ b/templates/note/note_new.html
@@ -28,7 +28,11 @@
     </tr>
     <tr>
       <td><label>{{form.elapsed_time.label}}</label></td>
-      <td>{{form.elapsed_time}}</td>
+      <td>
+        {{form.elapsed_time}}
+        <input type="checkbox" name="auto_calc" id="auto_calc" />
+        自動計算
+      </td>
     </tr>
     <tr>
       <td><label>{{form.text_type.label}}</label></td>
