Safari でグラフが動かないのを修正

--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -106,12 +106,12 @@
             </form>
         </div>
 
-        <div class="content">
+<div class="content">
             <p style="color: green"></p>
             {% block content %}{% endblock content%}
             <br>
-        </div>
-        <div class="footer">
-        </div>
+</div><!-- class="content" -->
+      <div class="footer">
+      </div><!-- class="footer" -->
     </body>
 </html>
